[LOVE-CASE]: Fix of section on mobile screen

--- a/src/scss/blocks/home-page/advantages-section.scss
+++ b/src/scss/blocks/home-page/advantages-section.scss
@@ -91,11 +91,10 @@
     grid-row-end: 3;
 
     @media (max-width: $mobileSmall) {
-      grid-row-start: span 1;
       grid-column-start: 1;
-      grid-column-end: 1;
+      grid-column-end: 2;
       grid-row-start: 1;
-      grid-row-end: 1;
+      grid-row-end: 2;
     }
   }
 
